--- a/web/my_app.html
+++ b/web/my_app.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My app</title>
-    <!-- imorts the dart script -->    
+    <!-- imports the dart script -->    
     <script async type="application/dart" src="my_app.dart"></script>
     <script async src="packages/browser/dart.js"></script>
     
